--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,8 @@
               <h3><i class="fa-brands fa-discord"></i>Discord @Izurays#8288</h3>
               <h3><i class="fa-brands fa-twitter"></i>@Izurays</h3>
               <h3><i class="fa-solid fa-envelopes"></i>izuraysonyeocha@gmail.com</h3>
-              <h3><i class="fa-brands fa-whatsapp-square"></i>+2348186827857</h3>
+              <h3><i class="fa-solid fa-envelopes"></i>izurays@izurays.com.ng</h3>
+              
             </div>
         
           </div>
